--- a/src/component/ChatInput.css
+++ b/src/component/ChatInput.css
@@ -22,3 +22,9 @@
   color: aliceblue;
   font-weight: bold;
 }
+
+.chat-send-button:hover {
+  box-shadow: 0 0 15px rgb(10, 133, 75);
+  transform: scale(1.05);
+  transition: 0.3s ease;
+}
